# vocalizeai-api

./: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.main.yml  docker-compose.yml  entrypoint.sh  migrate.sh  pyproject.toml  run.sh  setup-environments.sh
migrations/: env.py
migrations/versions/: 3ab3e071d151_initial_migrations.py  440def5f382d_alterando_relacionamento_do_usuario_e_.py  60d453f57982_initial_migrations.py  b57080a06872_add_relationship_usuario_vocalizacao.py  bc6f067cb8c2_add_initial_tables.py  d01e76548d93_add_created_at_updated_at_ao_.py  d6c88cb0b081_add_on_delete_cascade_to_usuario_.py  e443932a272f_add_aceite_termos_bool_to_usuario.py
src/: database.py  enviroment.py  main.py  security.py
src/controllers/: audio_controller.py  auth_controller.py  participante_controller.py  usuario_controller.py  vocalizacao_controller.py
src/models/: __init__.py  audio_model.py  classificacao_model.py  participante_model.py  usuario_model.py  vocalizacao_model.py
src/preprocessing/: preprocessing.py
src/schemas/: audio_schema.py  auth_schema.py  classificacao_schema.py  participante_schema.py  usuario_schema.py  vocalizacao_schema.py
src/services/: audio_service.py  auth_service.py  participante_service.py  usuario_service.py  vocalizacao_service.py
src/utils/: email_utils.py  generate_refresh_token.py
